Small fix: repositories can now be specified as relative path.